syntax = "proto3";

message Empty {
}

message Timestamp {
        int32 epoch = 1;
}

message Signature {
        string signature = 1;
}

message Candidate {
        string name = 1;
}

message Election {
        string description = 1;
        map<int32, Candidate> candidates = 2; // candidate id => candidate
}

message ElectionMetadata {
        Timestamp electionStart = 1;
        Timestamp electionEnd = 2;
        map<int32, Election> elections = 3; // election id => election

        Signature signature = 4;
}

message ProposedBallot {
        int32 voterDeviceId = 1;
        Timestamp castAt = 2;
        map<int32, int32> candidateChoices = 3; // election id => candidate id

        Signature voterDeviceSignature = 4;
}

message RecordedBallot {
        ProposedBallot proposedBallot = 1;
        Timestamp recordedAt = 2;

        Signature voteServerSignature = 3;
}
